Use Integer.valueOf instead of autoboxing.